Open selected article in browser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "1.0.0"
 edition = "2018"
 
 [dependencies]
+inquire = "0.2.1"
 reqwest = "*"
 select = "*"
+open = "1"
 tokio = { version = "1", features = ["full"] }
