Add option for print news to terminal (without open browser)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ reqwest = "*"
 select = "*"
 open = "1"
 tokio = { version = "1", features = ["full"] }
+clap = { version = "3.1.18", features = ["derive"] }
+
