Remove empty lines when text is shown in terminal and wrap text for better reading

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ select = "*"
 open = "1"
 tokio = { version = "1", features = ["full"] }
 clap = { version = "3.1.18", features = ["derive"] }
+textwrap = "0.15"
 
